@@ -143,7 +143,6 @@ const char *gpac_doc =
 "The inverse operation (forcing a decode to happen) is possible using the __reframer__ filter.\n"
 "EX gpac -i file.mp4 reframer:raw=av -o null\n"
 "This will force decoding media from `file.mp4` and trash (send to `null`) the result (doing a decoder benchmark for example).\n"
-"\n"
 "## Escaping option separators\n"
 "When a filter uses an option defined as a string using the same separator character as gpac, you can either "
 "modify the set of separators, or escape the separator by duplicating it. The options enclosed by duplicated "
@@ -422,7 +421,7 @@ const char *gpac_doc =
 "EX gpac -i source.mp4:#MyProp=(Width+1280)HD\n"
 "This will assign property `MyProp` to `HD` for PIDs with property `Width` greater than 1280.\n"
 "\n"
-"The property value can be templated using the following keywords:\n"
+"The property value can use templates with the following keywords:\n"
 "- $GINC(init[,inc]) or @GINC(...): replaced by integer for each new output PID of the filter (see specific filter options for details on syntax)\n"
 "- PROP (enclosed between `$` or `@`): replaced by serialized value of property `PROP` (name or 4CC) of the PID or with empty string if no such property\n"
 "EX gpac -i source.ts:#ASID=$PID$\n"
@@ -440,6 +439,18 @@ const char *gpac_doc =
 "An option file declaration (`filter:myopts.txt`) follows the same inheritance rules as regular options.\n"
 "EX gpac -i source.mp4:myopts.txt:foo=bar -o dst\n"
 "Any filter loaded between `source.mp4` and `dst` will inherit both `myopts.txt` and `foo` options and will resolve options and PID properties given in `myopts.txt`.\n"
+"\n"
+"# Ignoring filters at run-time\n"
+"The special option `ccp` can be used to replace filters with an identity filter at run-time based on the input codec ID.\n"
+"The option is a list of codec IDs to check. For encoder filters, an empty list reuses the encoder codec type.\n"
+"When the PID codec ID matches one of the specified codec, the filter is replaced with a reframer filter with single PID input and same name and ID.\n"
+"EX -i src c=avc:b=1m:ccp -o mux\n"
+"This will replace the encoder filter with a reframer if the input PID is in AVC|H264 format, or uses the encoder for other visual PIDs.\n"
+"EX -i src c=avc:b=1m:ccp=avc,hevc -o mux\n"
+"This will replace the encoder filter with a reframer if the input PID is in AVC|H264 or HEVC format, or uses the encoder for other visual PIDs.\n"
+"EX -i src cecrypt:cfile=drm.xml:ccp=aac -o mux\n"
+"This will replace the encryptor filter with a reframer if the input PID is in AAC format, or uses the encryptor for other PIDs.\n"
+"\n"
 "# Specific filter options\n"
 "Some specific keywords are replaced when processing filter options.\n"
 "Warning: These keywords do not apply to PID properties. Multiple keywords cannot be defined for a single option.\n"
@@ -475,6 +486,7 @@ const char *gpac_doc =
 "- gfloc: following options are local to filter declaration, not inherited (no value)\n"
 "- gfopt: following options are not tracked (no value)\n"
 "- gpac: argument separator for URLs (no value)\n"
+"- ccp: filter replacement control (string list value)\n"
 "\n"
 "The buffer control options are used to change the default buffering of PIDs of a filter:\n"
 "- `FBT` controls the maximum buffer time of output PIDs of a filter\n"
